--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -21,12 +21,17 @@ common common
     DataKinds
     DeriveAnyClass
     DerivingStrategies
+    DerivingVia
     ExplicitNamespaces
     OverloadedStrings
+    RecordWildCards
+    RoleAnnotations
 
 library
   import: common
   exposed-modules:
+    ZkFold.Bitcoin.Class
+    ZkFold.Bitcoin.IO
     ZkFold.Bitcoin.Provider.Node
     ZkFold.Bitcoin.Provider.Node.ApiEnv
     ZkFold.Bitcoin.Provider.Node.Class
@@ -37,6 +42,7 @@ library
     ZkFold.Bitcoin.Types.Internal.BlockHash
     ZkFold.Bitcoin.Types.Internal.BlockHeader
     ZkFold.Bitcoin.Types.Internal.Common
+    ZkFold.Bitcoin.Types.Internal.Provider
 
   -- other-modules:
   -- other-extensions:
@@ -44,11 +50,14 @@ library
     aeson,
     base >=4.18.3.0 && <5,
     bytestring,
+    deriving-aeson,
     http-client,
     http-client-tls,
+    mtl,
     servant,
     servant-client,
     text,
+    transformers,
 
   hs-source-dirs: src
   default-language: GHC2021
