feat(#11): mempool.space provider support

--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -33,6 +33,8 @@ library
   exposed-modules:
     ZkFold.Bitcoin.Class
     ZkFold.Bitcoin.IO
+    ZkFold.Bitcoin.Provider.Common
+    ZkFold.Bitcoin.Provider.MempoolSpace
     ZkFold.Bitcoin.Provider.Node
     ZkFold.Bitcoin.Provider.Node.ApiEnv
     ZkFold.Bitcoin.Provider.Node.Class
@@ -42,8 +44,11 @@ library
     ZkFold.Bitcoin.Types
     ZkFold.Bitcoin.Types.Internal.BlockHash
     ZkFold.Bitcoin.Types.Internal.BlockHeader
+    ZkFold.Bitcoin.Types.Internal.BlockHeight
     ZkFold.Bitcoin.Types.Internal.HexByteString
+    ZkFold.Bitcoin.Types.Internal.NetworkId
     ZkFold.Bitcoin.Types.Internal.Provider
+    ZkFold.Bitcoin.Types.Internal.UTxO
 
   -- other-modules:
   -- other-extensions:
@@ -54,8 +59,10 @@ library
     bytestring,
     cryptohash-sha256,
     deriving-aeson,
+    haskoin-core,
     http-client,
     http-client-tls,
+    http-media,
     mtl,
     servant,
     servant-client,
