--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -45,6 +45,7 @@ library
     ZkFold.Bitcoin.Types.Internal.BlockHash
     ZkFold.Bitcoin.Types.Internal.BlockHeader
     ZkFold.Bitcoin.Types.Internal.BlockHeight
+    ZkFold.Bitcoin.Types.Internal.Common
     ZkFold.Bitcoin.Types.Internal.HexByteString
     ZkFold.Bitcoin.Types.Internal.NetworkId
     ZkFold.Bitcoin.Types.Internal.Provider
