--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -57,6 +57,7 @@ library
     aeson,
     base >=4.18.3.0 && <5,
     base16-bytestring,
+    bytes,
     bytestring,
     cryptohash-sha256,
     deriving-aeson,
