--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -32,6 +32,7 @@ library
   import: common
   exposed-modules:
     ZkFold.Bitcoin.Class
+    ZkFold.Bitcoin.Errors
     ZkFold.Bitcoin.IO
     ZkFold.Bitcoin.Provider.Common
     ZkFold.Bitcoin.Provider.MempoolSpace
