--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -42,6 +42,7 @@ library
     ZkFold.Bitcoin.Provider.Node.Exception
     ZkFold.Bitcoin.Provider.Node.Request
     ZkFold.Bitcoin.Provider.Node.Response
+    ZkFold.Bitcoin.Test.Constants
     ZkFold.Bitcoin.Types
     ZkFold.Bitcoin.Types.Internal.BlockHash
     ZkFold.Bitcoin.Types.Internal.BlockHeader
