--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -88,6 +88,7 @@ test-suite zkfold-bitcoin-lib-test
   main-is: Main.hs
   build-depends:
     base,
+    haskoin-core,
     tasty,
     tasty-hunit,
     zkfold-bitcoin-lib,
