feat(#18): add `buildTx`

--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -51,6 +51,7 @@ library
     ZkFold.Bitcoin.Types.Internal.HexByteString
     ZkFold.Bitcoin.Types.Internal.NetworkId
     ZkFold.Bitcoin.Types.Internal.Provider
+    ZkFold.Bitcoin.Types.Internal.Skeleton
     ZkFold.Bitcoin.Types.Internal.UTxO
 
   -- other-modules:
