feat(#23): update test to utilize complex script

--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -89,7 +89,11 @@ test-suite zkfold-bitcoin-lib-test
   main-is: Main.hs
   build-depends:
     base,
+    base16-bytestring,
+    bytes,
+    bytestring,
     haskoin-core,
     tasty,
     tasty-hunit,
+    text,
     zkfold-bitcoin-lib,
