--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -32,6 +32,7 @@ library
   import: common
   exposed-modules:
     ZkFold.Bitcoin.Class
+    ZkFold.Bitcoin.CoinSelection
     ZkFold.Bitcoin.Errors
     ZkFold.Bitcoin.IO
     ZkFold.Bitcoin.Provider.Common
@@ -53,6 +54,7 @@ library
     ZkFold.Bitcoin.Types.Internal.Provider
     ZkFold.Bitcoin.Types.Internal.Skeleton
     ZkFold.Bitcoin.Types.Internal.UTxO
+    ZkFold.Bitcoin.Utils
 
   -- other-modules:
   -- other-extensions:
@@ -62,6 +64,7 @@ library
     base16-bytestring,
     bytes,
     bytestring,
+    conduit,
     cryptohash-sha256,
     deriving-aeson,
     haskoin-core,
