feat: modularize off-chain code for easy integration

--- a/zkfold-bitcoin-lib.cabal
+++ b/zkfold-bitcoin-lib.cabal
@@ -34,6 +34,7 @@ library
     ZkFold.Bitcoin.Class
     ZkFold.Bitcoin.CoinSelection
     ZkFold.Bitcoin.Errors
+    ZkFold.Bitcoin.Examples.HTLC
     ZkFold.Bitcoin.IO
     ZkFold.Bitcoin.Provider.Common
     ZkFold.Bitcoin.Provider.MempoolSpace
